Adjust sort option menu spacing and fix api call for sort order

--- a/src/styles/PageHeader.module.css
+++ b/src/styles/PageHeader.module.css
@@ -29,7 +29,7 @@
 }
 
 .optionsForm {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 
 .optionsForm select {
